[gd_scene load_steps=23 format=2]

[ext_resource path="res://scripts/scenes/characters_menu/characters_menu.gd" type="Script" id=1]
[ext_resource path="res://images/game/cat/scale/cat_body.png" type="Texture" id=2]
[ext_resource path="res://images/game/cat/scale/cat_foot.png" type="Texture" id=3]
[ext_resource path="res://images/game/cat/scale/cat_hand.png" type="Texture" id=4]
[ext_resource path="res://images/game/bear/scale/bear_body.png" type="Texture" id=5]
[ext_resource path="res://images/game/bear/scale/bear_foot.png" type="Texture" id=6]
[ext_resource path="res://images/game/bear/scale/bear_hand.png" type="Texture" id=7]
[ext_resource path="res://fonts/pixel.ttf" type="DynamicFontData" id=8]

[sub_resource type="Animation" id=1]
resource_name = "choose"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 40 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "choose"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 40 ), Vector2( 0, 0 ) ]
}

[sub_resource type="DynamicFont" id=3]
size = 100
font_data = ExtResource( 8 )

[sub_resource type="Animation" id=4]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("player_1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 906.653, 838.037 ), Vector2( 389.506, 903.263 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("player_1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 906.653, 838 ), Vector2( 1458.77, 903.263 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("player_1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 389.506, 903.263 ), Vector2( 906.653, 838 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("player_1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1458.77, 903.263 ), Vector2( 906.653, 838 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("player_2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 906, 949.338 ), Vector2( 389.5, 903.263 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("player_2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 906, 949.338 ), Vector2( 1458.77, 903.263 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("player_2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 389.5, 903.263 ), Vector2( 906, 949.338 ) ]
}

[sub_resource type="Animation" id=11]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("player_2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1458.77, 903.263 ), Vector2( 906, 949.338 ) ]
}

[sub_resource type="DynamicFont" id=12]
size = 75
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=14]
size = 50
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=13]
size = 90
font_data = ExtResource( 8 )

[node name="characters_menu" type="Node2D"]
script = ExtResource( 1 )

[node name="cat" type="Node2D" parent="."]
position = Vector2( 381.335, 473.574 )
scale = Vector2( 0.7, 0.7 )

[node name="body" type="Sprite" parent="cat"]
texture = ExtResource( 2 )

[node name="left_foot" type="Sprite" parent="cat"]
position = Vector2( -180.932, 490.031 )
texture = ExtResource( 3 )

[node name="right_foot" type="Sprite" parent="cat"]
position = Vector2( 168.878, 484.201 )
texture = ExtResource( 3 )

[node name="hand" type="Sprite" parent="cat"]
position = Vector2( -42.6964, 288.828 )
texture = ExtResource( 4 )

[node name="animation" type="AnimationPlayer" parent="cat"]
anims/choose = SubResource( 1 )

[node name="bear" type="Node2D" parent="."]
position = Vector2( 1555.02, 512.725 )
scale = Vector2( 0.7, 0.7 )

[node name="body" type="Sprite" parent="bear"]
texture = ExtResource( 5 )
flip_h = true

[node name="left_foot" type="Sprite" parent="bear"]
position = Vector2( -167.325, 436.904 )
texture = ExtResource( 6 )
flip_h = true

[node name="right_foot" type="Sprite" parent="bear"]
position = Vector2( 175.409, 436.904 )
texture = ExtResource( 6 )
flip_h = true

[node name="hand" type="Sprite" parent="bear"]
position = Vector2( 52.9863, 247.269 )
texture = ExtResource( 7 )

[node name="animation" type="AnimationPlayer" parent="bear"]
anims/choose = SubResource( 2 )

[node name="player_1" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 906.653, 838 )

[node name="center" type="CenterContainer" parent="player_1"]
margin_left = -156.0
margin_top = -29.0
margin_right = 163.0
margin_bottom = 49.0

[node name="label" type="Label" parent="player_1/center"]
margin_right = 357.0
margin_bottom = 94.0
custom_fonts/font = SubResource( 3 )
text = "PLAYER 1"

[node name="player_2" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 906, 949.338 )

[node name="center" type="CenterContainer" parent="player_2"]
margin_left = -156.0
margin_top = -29.0
margin_right = 163.0
margin_bottom = 49.0

[node name="label" type="Label" parent="player_2/center"]
margin_right = 369.0
margin_bottom = 94.0
custom_fonts/font = SubResource( 3 )
text = "PLAYER 2"

[node name="player_1_animation" type="AnimationPlayer" parent="."]
anims/choose_left = SubResource( 4 )
anims/choose_right = SubResource( 5 )
anims/release_left = SubResource( 6 )
anims/release_right = SubResource( 7 )

[node name="player_2_animation" type="AnimationPlayer" parent="."]
anims/choose_left = SubResource( 8 )
anims/choose_right = SubResource( 9 )
anims/release_left = SubResource( 10 )
anims/release_right = SubResource( 11 )

[node name="center_choose" type="CenterContainer" parent="."]
margin_left = 5.30005
margin_top = 18.5502
margin_right = 1924.3
margin_bottom = 107.55

[node name="label" type="Label" parent="center_choose"]
margin_left = 63.0
margin_top = 8.0
margin_right = 1856.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 12 )
text = "Choose your character by arrows or gamepad's buttons"

[node name="center_back" type="CenterContainer" parent="."]
margin_top = 95.4011
margin_right = 1919.0
margin_bottom = 184.401

[node name="label" type="Label" parent="center_back"]
margin_left = 707.0
margin_top = 23.0
margin_right = 1211.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 14 )
text = "press \"B\" to go to menu"

[node name="center_play" type="CenterContainer" parent="."]
editor/display_folded = true
visible = false
margin_right = 1919.0
margin_bottom = 119.0

[node name="label" type="Label" parent="center_play"]
margin_left = 451.0
margin_top = 23.0
margin_right = 1467.0
margin_bottom = 95.0
custom_fonts/font = SubResource( 12 )
text = "Press \"x\" or ENTER to play game"

[node name="to_game_label" type="Label" parent="."]
visible = false
margin_left = 767.147
margin_top = 350.755
margin_right = 1148.15
margin_bottom = 523.755
custom_fonts/font = SubResource( 13 )
text = "Press \"X\"
or \"Space\""
[connection signal="animation_finished" from="player_1_animation" to="." method="_on_player_1_animation_animation_finished"]
[connection signal="animation_finished" from="player_2_animation" to="." method="_on_player_2_animation_animation_finished"]
